--- a/WakeLock_WifiLock_Exerciser/app/src/main/res/layout/content_main.xml
+++ b/WakeLock_WifiLock_Exerciser/app/src/main/res/layout/content_main.xml
@@ -141,6 +141,17 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnAcquireWifiLock" />
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="114dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Background Server"
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
     <Button
         android:id="@+id/btnStartService"
         android:layout_width="wrap_content"
@@ -151,6 +162,17 @@
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/btnAcquireWifiLock"
         android:layout_marginStart="8dp" />
+
+    <Button
+        android:id="@+id/btnStartServer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="Start"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:layout_constraintLeft_toRightOf="@+id/textView2"
+        android:layout_marginLeft="8dp" />
 
     <Button
         android:id="@+id/btnStopService"
@@ -164,6 +186,17 @@
         android:layout_marginStart="8dp" />
 
     <Button
+        android:id="@+id/btnStopServer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="Stop"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:layout_constraintLeft_toRightOf="@+id/btnAcquireWakeLock"
+        android:layout_marginLeft="8dp" />
+
+    <Button
         android:id="@+id/btnConfigureBatteryOptimization"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -171,7 +204,7 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/btnStartServer" />
 
     <CheckBox
         android:id="@+id/checkPost"
