--- a/WakeLock_WifiLock_Exerciser/app/src/main/res/layout/content_main.xml
+++ b/WakeLock_WifiLock_Exerciser/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
+
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -44,9 +51,9 @@
         android:text="HTTP Post Address:"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="8dp" />
+        android:layout_marginTop="64dp" />
 
     <EditText
         android:id="@+id/editIpAddress"
@@ -58,11 +65,12 @@
         android:text="http://192.168.0.2:8082"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="64dp"
         app:layout_constraintLeft_toRightOf="@+id/textView2"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginEnd="8dp"
+        app:layout_constraintHorizontal_bias="0.454" />
 
     <Button
         android:id="@+id/btnAcquireWakeLock"
@@ -143,14 +151,25 @@
 
     <TextView
         android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Configure Battery Optimizations"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnStartServer" />
+
+    <TextView
+        android:id="@+id/textView8"
         android:layout_width="114dp"
         android:layout_height="40dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Background Server"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <Button
         android:id="@+id/btnStartService"
@@ -200,11 +219,11 @@
         android:id="@+id/btnConfigureBatteryOptimization"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Configure Battery Optimization"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnStartServer" />
+        android:text="Via Android Intent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <CheckBox
         android:id="@+id/checkPost"
@@ -244,10 +263,32 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Service not yet started"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnDisableBatteryOptimizationWithMX" />
+
+    <Button
+        android:id="@+id/btnDisableBatteryOptimizationWithMX"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Disable (MX)"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/btnConfigureBatteryOptimization"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent" />
 
+    <Button
+        android:id="@+id/btnEnableBatteryOptimizationWithMX"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Enable (MX)"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnConfigureBatteryOptimization"
+        app:layout_constraintLeft_toRightOf="@+id/btnDisableBatteryOptimizationWithMX"
+        android:layout_marginLeft="8dp" />
+
 
 </android.support.constraint.ConstraintLayout>
+
+</ScrollView>
