--- a/WakeLock_WifiLock_Exerciser/app/src/main/res/layout/content_main.xml
+++ b/WakeLock_WifiLock_Exerciser/app/src/main/res/layout/content_main.xml
@@ -127,15 +127,15 @@
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/checkPost" />
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="115dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Background Service Actions"
-        app:layout_constraintTop_toBottomOf="@+id/btnStartService"
-        android:layout_marginLeft="0dp" />
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="115dp"
+            android:layout_height="38dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="Background Service Actions"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnStartService" />
 
     <TextView
         android:id="@+id/textView6"
